--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
     "extends": "@tsconfig/react-native/tsconfig.json",
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "src": [
-                "src/*"
-            ],
-            "components/*": [
-                "src/components/*"
-            ],
-            "assets/*": [
-                "assets/*"
-            ],
-        },
-    }
+    // "compilerOptions": {
+    //     "baseUrl": ".",
+    //     "paths": {
+    //         "src": [
+    //             "src/*"
+    //         ],
+    //         "components/*": [
+    //             "src/components/*"
+    //         ],
+    //         "assets/*": [
+    //             "assets/*"
+    //         ],
+    //         "views/*": [
+    //             "src/views/*"
+    //         ],
+    //     },
+    // }
 }
