--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.6",
     "expo-cli": "^6.3.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
@@ -24,7 +25,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
