--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
     "expo-cli": "^6.3.2",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
+    "@types/react": "~18.0.27",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^2.0.3",
-    "@types/jest": "^29.5.0",
-    "@types/react": "^18.0.35",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.6",
     "@types/react-native": "^0.71.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
