--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,24 @@
 {
     "extends": "@tsconfig/react-native/tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "."
-    }
+        "baseUrl": ".",
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "isolatedModules": true,
+        "jsx": "react",
+        "lib": [
+            "es6"
+        ],
+        "moduleResolution": "node",
+        "noEmit": true,
+        "strict": true,
+        "target": "esnext"
+    },
+    "exclude": [
+        "node_modules",
+        "babel.config.js",
+        "metro.config.js",
+        "jest.config.js"
+    ]
 }
