--- a/package.json
+++ b/package.json
@@ -10,28 +10,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.6",
     "expo-cli": "^6.3.2",
+    "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
-    "@types/react": "~18.0.27",
-    "typescript": "^4.9.4",
-    "expo-image-picker": "~14.1.1",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
