--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-web": "~0.18.10",
+    "recoil": "^0.7.7",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
