--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "isolatedModules": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "lib": [
             "es6"
         ],
