--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
-    "expo": "~48.0.6",
-    "expo-cli": "^6.3.2",
+    "expo": "^48.0.17",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
